# hermes_memory-codex

./: .env.example  .gitignore  Dockerfile  README.md  README.zh-CN.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
docs/: ACTIVE_PHASE.md  AGENT_OPERATING_PROTOCOL.md  ARCHITECTURE_DECISION_RECORD.md  CODEX_A_LINEAR_PROMPT.md  CODEX_A_OUTPUT_PROTOCOL.md  CODEX_B_LINEAR_PROMPT.md  DEV_LOG.md  HANDOFF_LOG.md  LINEAR_PROJECT_PRD.md  LINEAR_WORKFLOW.md  MVP_FILE_EXTRACTION_PLAYBOOK.md  MVP_PILOT_DAY1_FAKE_ISSUE_DRY_RUN.md  MVP_PILOT_DAY1_FAKE_ISSUE_INPUT.json  MVP_PILOT_DAY1_ISSUE_INTAKE_TEMPLATE.json  MVP_PILOT_DAY1_ISSUE_INTAKE_WORKSHEET.md  MVP_PILOT_DAY1_RUN_SHEET.md  MVP_PILOT_EVIDENCE_REVIEW_CHECKLIST.md  MVP_PILOT_FEEDBACK_TEMPLATE.md  MVP_PILOT_ISSUE_INTAKE_RUNBOOK.md  MVP_PILOT_KNOWN_RISKS.md  MVP_PILOT_LAUNCH_PACKET.md  MVP_PILOT_PREFLIGHT_SMOKE_PROMPT.md  MVP_PILOT_REVIEW_DRY_RUN_INPUT_TEMPLATE.json  MVP_PILOT_REVIEW_DRY_RUN_RUNBOOK.md  MVP_PILOT_RUNBOOK.md  MVP_PILOT_USER_GUIDE.md  MVP_STRATEGY_ANALYSIS_PLAYBOOK.md  MVP_TENDER_REVIEW_PLAYBOOK.md  NEXT_CODEX_A_PROMPT.md  NEXT_CODEX_C_PROMPT.md  NIGHTLY_CODEX_A_PROMPT.md  NIGHTLY_SPRINT_PROTOCOL.md  NIGHTLY_SPRINT_QUEUE.md  PHASE15_BASELINE_AUDIT.md  PHASE15_CLOSEOUT.md  PHASE211_ENTERPRISE_CONTEXT_AND_MULTIMODAL_PLAN.md  PHASE212_EXCEL_PPTX_INGESTION_PLAN.md  PHASE213_MEETING_TRANSCRIPT_INGESTION_PLAN.md  PHASE214_REGRESSION_EVAL_PLAN.md  PHASE215_PROJECT_STATUS_AND_NEXT_ROUTE.md  (+58 more)
reports/: .gitignore  README.md
reviews/: .gitignore  README.md
scripts/: phase21_real_gate.py  (+20 more)
(+122 files in other folders)
